objects/ssot__AssortmentProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssortmentId__c</fullName>
        <label>Assortment</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FocusProductType__c</fullName>
        <label>Focus Product Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assortment Product Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductDistributionStatus__c</fullName>
        <label>Product Distribution Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductFacingValueNumber__c</fullName>
        <label>Product Facing Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductSellingPrice__c</fullName>
        <label>Product Selling Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
</CustomObject>